@@ -4,12 +4,25 @@ Hash: SHA256
 DIST ustr-1.0.4.tar.bz2 233723 SHA256 3daf6eae9f78de1e872c0b2b83cce35515b94d4bb8a074e48f331fd99e1fc2c4 SHA512 b7df6ca3a9f25ee6f5c9ab4325732d348de27c5e02ebff36a7d5706f56b2df994df35bd652825a28e27bbde731c6a5933248d99c670d192b1952e7534eec1510 WHIRLPOOL b37783d844e85c3bd7725ac92ca2c84f27f03914d5cf79da2a1c2e48f737d869c49763d1c1ed799cc117d7b414aa8792e6d5833e028521ffaf500735ad4084c2
 EBUILD ustr-1.0.4-r1.ebuild 841 SHA256 b781ca91349934cf4122f8bee199eeba0101bec3eb5c0e08f56b2ea8a9629122 SHA512 aa979d7b284638b97e1f7651c61d524a9bad5dde9e3a87396b308a4601d0ceb0a43e8745a03ab91992420f456db07bf2f2e9949b59e6a7bbade97b1b60472feb WHIRLPOOL e70a11f3594a1db19986b1e570dd74907e18f5fb292816a531d0151e4ff1794d6aea31cfd3dd5789d7852b45f6aeaf8bb0bcabb66c98b914c31b72b4b87cb1c4
 EBUILD ustr-1.0.4-r2.ebuild 929 SHA256 5ecbd4f09c933e92337affcc9718ce455af49ba18ce07ccf669823d676b9fc2d SHA512 9b4f6240845398fb5f3e5fb47c8b9197639d87913e8392433c59871ca1af026ee90325346908ebe69e0a4f9a69b0812d7b2efb1ac686f447b6f8686e2d84a5a3 WHIRLPOOL 1689332965a4e8a57b7d58be3e103f274c568a7a5b91def9ba935a1cfa16f01b46d4d8239298128b611b9e3dcc3e7d33ee080d1673a9f02d5e0d5d68ffdca794
-MISC ChangeLog 1332 SHA256 759640edc4ea5844f358d07d28f223b8c4f3bd9e66e896b2306c7330ddba41c0 SHA512 8ba9ad6c8c5bc4fe91051911d82b54be08c92b61dafff2fd4faacf181170e0e29bc4ebe53a793a3d931d99831286c6b1f2dfe5bab5cbb3ade0031632bda8eb29 WHIRLPOOL 5902b2659deff90811ee2a5b4509d5032d85140b0cb62f28a48e1cbf22667b4eca2732f41fd65242350b7956ae9834895972803a36d62406079b65b6211b4303
-MISC metadata.xml 211 SHA256 84ff2341253cdd21a6782e14ebc076a8bcae11428aacfe2454f4b32165504727 SHA512 a9385b7dc02a9537080a9b1bf59ae2caacd84cab2e3ef1fee15e4f10d5518ae9f71e4ce07d99104e643d18a79ca05116d74e97ec7d230d21b340656701547078 WHIRLPOOL 4309ff085fbfd1a91434c0a9dd4c23b7ad8b10b0559beedcb4d911745543745691abe91bb1e361dd88b6383678f020c95deb9359876319a6407ac0ef2dcbd221
+EBUILD ustr-1.0.4-r3.ebuild 962 SHA256 e886d82fba9d3c462aeaa51c556001343c4925f3a1299aacf084716eff157abc SHA512 68d78120347ac87e584a852e999ae630674bc6094da6caab80660f9cfd0346df72b2e8b38588b568d45a998c32277646ed7eeb4bfd138358850d60c6943cb0af WHIRLPOOL ca25b65e6925657418b52e58c5b288d52d81fe19ec4768f1f2efa9d206071bf834ff9dd5d09dd2e2c0516368c19e2d60d8823271a94b3f961dc361ec72103906
+MISC ChangeLog 1560 SHA256 e73b12f6676604740310f441e7cb5f3f136492aa8950673adcdd15e0c0bb3df3 SHA512 64dc6e4595d8d8b1334bcf90d7e23df288288306d57ed15e25ba1cbbdb99b83cff514ba60cc7426145b7cb8198aca1be64e0813b7c3efca85261186222a7b445 WHIRLPOOL f4ed100cb008de88cc2d434ad0a20c563059aaa097f906dec458ffdb47fde7410f0d551e07dca117ff93cd75179d6ac4f0d62f99cff7160fb868a4250202ab4c
+MISC metadata.xml 315 SHA256 9e0543fd808dc0851421c81c0d96fed13d97cfc067448b003355d0c19d847824 SHA512 37bd08e283d18e0483e2591172657995369bcfe1b3d92e3973f67242f14d048ca0b078c9eec940457eda2f70c6cc3bfd4c3f23faa1cc7338eb5734ac7af7e3ca WHIRLPOOL b98db3a4028e05c0f48c216db94efe7794bd28d3d1634f292b2bdf8efef85ccf6dca7df91eef90aea608e3f07f2712355d33ab742af1d8b58ba5821276134fc3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJaotsACgkQVWmRsqeSphOxoQCeIRTCa5AXObZt3QGHf6twQohG
-cLkAmwdeWBlGymV1XPe6u9DkJ+CRkyV1
-=z8tx
+iQJ8BAEBCABmBQJSfkwvXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88z2EP/2IwKtjQUray5KYJFs2S3p8Y
+777jy5OI/aEoKydqoMPfaPy1lbhS2y01ZvmI9e/a1KiF3HK52Gg0OXLXYtBrMAjn
+ZXpk2fUNgzVjmEcOkxwLfyqKo1cmViL62vQWg5ia9miKQD/2yb/zkhVApfYEatIv
+hSjQjuWjIRonKMIBs6SNt5en41p29F5WOwIwXDDqm9QbpmzB9j5wI+XJ5B8H7S8H
+Jc5c+6SbIzE8/mMvNgJhTuQ5W2Q5V9qhShwY0pJt1anZSZLNYzpnLk2nQcL7c4HH
+XNAGIIRNjeqkzzl5d5eAbfB7qETTRQTDqidql0JqDDjfwiw5Fa3MlKF0R5lgZGHi
+k5yxTrr3d5UaMU+1UVuG1prjTYpc07FMUfeMiaK11bSavWNUFKUpKxnU58+CKcG/
+IkYWh5KUSzwsRe6vbhoX9PluGcF3dP3Bwd8mJMja1vBGIX9rCJVNkGk0BwbZmVTh
+/yHacwIfJXdKcBfcz0oYqpu2KmV5SBg2Q/3ismCb75Ap+exsiA6NR00Tu2zkF9b4
+R8pvNGPoFDu6rozCl2cBfLYDMjAFTUc4OZ1bVLH2OJ+TKWoQVvW2tzQfHWzFN7w6
+ygux73dp88YpZmc9pdubvsujnRci7hbpoxR4a4lzee5UR54rxWEPHNKwFwjo90Le
+WVsRlFI5B2YtomrPB2YY
+=U+D5
 -----END PGP SIGNATURE-----
