@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+<herd>proxy-maintainers</herd>
 <maintainer>
-	<email>maintainer-needed@gentoo.org</email>
+	<email>Yamakuzure@gmx.net</email>
+	<name>Sven Eden</name>
+	<description>Maintainer. Assign bugs to him</description>
 </maintainer>
 </pkgmetadata>
