@@ -1,0 +1,10 @@
+DEFINED_PHASES=compile install test
+DESCRIPTION=Low-overhead managed string library for C
+EAPI=5
+HOMEPAGE=http://www.and.org/ustr
+KEYWORDS=~amd64 ~x86
+LICENSE=|| ( BSD-2 MIT LGPL-2 )
+SLOT=0
+SRC_URI=ftp://ftp.and.org/pub/james/ustr/1.0.4/ustr-1.0.4.tar.bz2
+_eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953
+_md5_=1c07b29544552e2bc2c1997e0f0f2232
