@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/ustr
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/ustr/ChangeLog,v 1.9 2013/10/13 13:40:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/ustr/ChangeLog,v 1.10 2013/11/09 14:54:14 hwoarang Exp $
+
+*ustr-1.0.4-r3 (09 Nov 2013)
+
+  09 Nov 2013; Markos Chandras <hwoarang@gentoo.org> +ustr-1.0.4-r3.ebuild,
+  metadata.xml:
+  Fix installation path. Patch by Sven Eden <Yamakuzure@gmx.net> who will also
+  be the maintainer
 
 *ustr-1.0.4-r2 (13 Oct 2013)
 
